--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -4,6 +4,10 @@ description: Build and push Docker image to Docker Hub
 on:
   workflow_call:
     inputs:
+      from_image_name:
+        description: "Base image name to use for the build (e.g., python)"
+        required: true
+        type: string
       from_image_tag:
         description: "Base image tag to use for the build (e.g., 3.12.2-slim)"
         required: true
@@ -50,6 +54,7 @@ jobs:
           context: .
           load: true
           build-args: |
+            FROM_IMAGE_NAME=${{ inputs.from_image_name }}
             FROM_IMAGE_TAG=${{ inputs.from_image_tag }}
           tags: local/image
 
@@ -89,6 +94,7 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           build-args: |
+            FROM_IMAGE_NAME=${{ inputs.from_image_name }}
             FROM_IMAGE_TAG=${{ inputs.from_image_tag }}
           tags: ${{ steps.meta.outputs.tags }}
 
