fix: Allow deletion of old images to continue on error

--- a/.github/workflows/build_and_push_image_to_ghcr.yml
+++ b/.github/workflows/build_and_push_image_to_ghcr.yml
@@ -110,6 +110,7 @@ jobs:
 
       - name: Delete old image @ghcr.io
         uses: dataaxiom/ghcr-cleanup-action@v1
+        continue-on-error: true
         with:
           package: "${{ inputs.image_name }}"
           delete-tags: ${{ steps.setup_metadata.outputs.delete_tags}}
