--- a/.github/workflows/build_and_push_image_to_ghcr.yml
+++ b/.github/workflows/build_and_push_image_to_ghcr.yml
@@ -4,11 +4,11 @@ description: Build and push Docker image to GitHub Container Registry (ghcr.io)
 on:
   workflow_call:
     inputs:
-      from_image_name:
+      base_image_name:
         description: "Base image name to use for the build (e.g., python)"
         required: true
         type: string
-      from_image_tag:
+      base_image_tag:
         description: "Base image tag to use for the build (e.g., 3.12.2-slim)"
         required: true
         type: string
@@ -25,7 +25,7 @@ on:
 jobs:
 
   build_and_test:
-    name: Test image ${{ inputs.image_name }}:${{ inputs.from_image_tag }}
+    name: Test image ${{ inputs.image_name }}:${{ inputs.base_image_tag }}
     runs-on: ubuntu-latest
 
     steps:
@@ -37,8 +37,8 @@ jobs:
           context: .
           load: true
           build-args: |
-            FROM_IMAGE_NAME=${{ inputs.from_image_name }}
-            FROM_IMAGE_TAG=${{ inputs.from_image_tag }}
+            BASE_IMAGE_NAME=${{ inputs.base_image_name }}
+            BASE_IMAGE_TAG=${{ inputs.base_image_tag }}
           tags: local/image
 
       - name: Test local image
@@ -124,6 +124,6 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            FROM_IMAGE_NAME=${{ inputs.from_image_name }}
-            FROM_IMAGE_TAG=${{ inputs.from_image_tag }}
+            BASE_IMAGE_NAME=${{ inputs.base_image_name }}
+            BASE_IMAGE_TAG=${{ inputs.base_image_tag }}
 
