--- a/.github/workflows/build_and_push_image_to_ghcr.yml
+++ b/.github/workflows/build_and_push_image_to_ghcr.yml
@@ -12,11 +12,11 @@ on:
         description: "Base image tag to use for the build (e.g., 3.12.2-slim)"
         required: true
         type: string
-      image_name:
+      build_image_name:
         description: "Name of the image to build (e.g., python-base)"
         required: true
         type: string
-      image_tags:
+      build_image_tags:
         description: "Comma-separated list of tags to apply to the image (e.g., 3.12.2-slim, latest)"
         required: true
         type: string
@@ -25,7 +25,7 @@ on:
 jobs:
 
   build_and_test:
-    name: Test image ${{ inputs.image_name }}:${{ inputs.base_image_tag }}
+    name: Test image ${{ inputs.build_image_name }}:${{ inputs.build_image_tag }}
     runs-on: ubuntu-latest
 
     steps:
@@ -45,12 +45,12 @@ jobs:
         run: |
           docker run --rm \
             -v $(pwd)/:/build/ \
-            -e IMAGE_TAGS="${{ inputs.image_tags }}" \
+            -e IMAGE_TAGS="${{ inputs.build_image_tags }}" \
             local/image bash \
             -c "cd /build && ./scripts/test.sh"
 
   build_and_push:
-    name: Push image ${{ inputs.image_name }}:${{ inputs.image_tags }} @ghcr.io
+    name: Push image ${{ inputs.build_image_name }}:${{ inputs.build_image_tags }} @ghcr.io
     runs-on: ubuntu-latest
     needs: build_and_test
     if: ${{ success() }}
@@ -75,7 +75,7 @@ jobs:
         id: setup_metadata
         run: |
 
-          readarray -td, image_tags <<<"${{ inputs.image_tags }},"; unset 'image_tags[-1]';
+          readarray -td, image_tags <<<"${{ inputs.build_image_tags }},"; unset 'image_tags[-1]';
           for image_tag in "${image_tags[@]}"; do
             trimmed_tag=$(echo "$image_tag" | xargs)
             META_TAGS+="type=raw,value=${trimmed_tag}\n"
@@ -95,7 +95,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/${{ github.repository_owner }}/${{ inputs.image_name }}
+            ghcr.io/${{ github.repository_owner }}/${{ inputs.build_image_name }}
           tags: |
             ${{ steps.setup_metadata.outputs.meta_tags}}
           flavor: |
@@ -112,7 +112,7 @@ jobs:
         uses: dataaxiom/ghcr-cleanup-action@v1
         continue-on-error: true
         with:
-          package: "${{ inputs.image_name }}"
+          package: "${{ inputs.build_image_name }}"
           delete-tags: ${{ steps.setup_metadata.outputs.delete_tags}}
 
       - name: Build and Push Docker image
