--- a/.github/workflows/build_and_push_image_to_ghcr.yml
+++ b/.github/workflows/build_and_push_image_to_ghcr.yml
@@ -4,6 +4,9 @@ description: Build and push Docker image to GitHub Container Registry (ghcr.io)
 on:
   workflow_call:
     inputs:
+      event_name:
+        required: true
+        type: string
       base_image_name:
         description: "Base image name to use for the build (e.g., python)"
         required: true
@@ -31,6 +34,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          platforms: linux/amd64
+
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
       - name: Build local image to test
         uses: docker/build-push-action@v4
         with:
@@ -40,20 +57,28 @@ jobs:
             BASE_IMAGE_NAME=${{ inputs.base_image_name }}
             BASE_IMAGE_TAG=${{ inputs.base_image_tag }}
           tags: local/image
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
 
       - name: Test local image
         run: |
           docker run --rm \
             -v $(pwd)/:/build/ \
-            -e IMAGE_TAGS="${{ inputs.build_image_tags }}" \
-            local/image bash \
-            -c "cd /build && ./scripts/test.sh"
+            -w /build \
+            --entrypoint "./scripts/test-image.sh"
+            local/image
+
+      - name: Scan the image
+        uses: anchore/sbom-action@v0
+        with:
+          image: local/image
+
 
   build_and_push:
     name: Push image ${{ inputs.build_image_name }}:${{ inputs.build_image_tags }} @ghcr.io
     runs-on: ubuntu-latest
     needs: build_and_test
-    if: ${{ success() }}
+    if: ${{ success() }} && (inputs.event_name != 'pull_request')
     permissions:
       contents: read
       packages: write
@@ -70,6 +95,14 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           platforms: linux/amd64,linux/arm64
+
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: Setup Docker metadata
         id: setup_metadata
@@ -126,4 +159,10 @@ jobs:
           build-args: |
             BASE_IMAGE_NAME=${{ inputs.base_image_name }}
             BASE_IMAGE_TAG=${{ inputs.base_image_tag }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
+          sbom: true
+          provenance: true
 
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
