--- a/.github/workflows/build_and_push_image_to_ghcr.yml
+++ b/.github/workflows/build_and_push_image_to_ghcr.yml
@@ -77,6 +77,7 @@ jobs:
         uses: anchore/sbom-action@v0
         with:
           image: local/image
+          artifact-name: local-image:(${{ inputs.build_image_tags }}).spdx.json
 
 
   build_and_push:
