fix: Correct variable name for image tag in build_and_test job

--- a/.github/workflows/build_and_push_image_to_ghcr.yml
+++ b/.github/workflows/build_and_push_image_to_ghcr.yml
@@ -19,7 +19,7 @@ on:
 jobs:
 
   build_and_test:
-    name: Test image ${{ inputs.build_image_name }}:${{ inputs.build_image_tag }}
+    name: Test image ${{ inputs.build_image_name }}:${{ inputs.build_image_tags }}
     runs-on: ubuntu-latest
 
     outputs:
