--- a/.github/workflows/build_and_push_image_to_ghcr.yml
+++ b/.github/workflows/build_and_push_image_to_ghcr.yml
@@ -84,7 +84,7 @@ jobs:
     name: Push image ${{ inputs.build_image_name }}:${{ inputs.build_image_tags }} @ghcr.io
     runs-on: ubuntu-latest
     needs: build_and_test
-    if: ${{ success() && (startsWith(github.ref, 'refs/tags/' || github.event_name == 'schedule') || github.event_name == 'workflow_dispatch') }}
+    if: ${{ success() && (startsWith(github.ref, 'refs/tags/') || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch') }}
     permissions:
       contents: read
       packages: write
